Update kitchenCI tests.
Update kitchenCI tests for commits :

9b67152 Docker: add prometheus_image variable to be able to specify prometheus image
c08c454 docker: ensure prometheus data directory owner is nobody
ff06897 Prometheus arg storage.local.path is no called storage.tsdb.path
d5b7517 prometheus alertmanager.url arg is not working anymore
b7b7d6f Fixing prometheus_commandline_args key, new prometheus use double dash.

--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -7,9 +7,9 @@ global:
     {{ key }}: {{ prometheus_external_labels[key] }}
 {% endfor %}
 {% endif %}
-{% if default_alert_rules %}
+{% if default_alert_rules or prometheus_rule_files %}
 rule_files:
-{{ prometheus_rule_files | to_json | from_json | to_nice_yaml }}
+- /prometheus-data/*.rules
 {% endif %}
 scrape_configs:
 {{ prometheus_scrape_configs | to_json | from_json | to_nice_yaml( width=50, explicit_start=False, explicit_end=False) }}
