--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -9,7 +9,7 @@ global:
 {% endif %}
 {% if default_alert_rules or prometheus_rule_files %}
 rule_files:
-- /prometheus-data/*.rules
+{{ prometheus_rules | to_json | from_json | to_nice_yaml }}
 {% endif %}
 scrape_configs:
 {{ prometheus_scrape_configs | to_json | from_json | to_nice_yaml( width=50, explicit_start=False, explicit_end=False) }}
