alertmanager: fixing template for alertmanager_global
Fixing template intent for alertmanager_global

the new template now indent correctly keys under the global section

--- a/templates/alertmanager.yml.j2
+++ b/templates/alertmanager.yml.j2
@@ -1,7 +1,7 @@
 ---
 {% if alertmanager_global is defined %}
 global:
-{{ alertmanager_global | to_json | from_json | to_nice_yaml }}
+    {{ alertmanager_global | to_json | from_json | to_nice_yaml | indent(4) }}
 {% endif %}
 {% if alertmanager_route is defined %}
 route:
